<resources>
    <string name="app_name">Whatapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_email_hint">Enter Email</string>
    <string name="login_pass_hint">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Create New Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create A New Account</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="or">OR</string>
    <string name="phone">Phone</string>
    <string name="not_have_an_account">Not Have An Account?</string>
    <string name="find_friend">Find Friend</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="hey_i_am_available">hey.. I am available</string>
    <string name="update">Update</string>
</resources>