<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/chatapp_logo"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_hint"
            android:background="@drawable/edittext_style"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:drawableTint="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:background="@drawable/button_style"/>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/grey"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Using Your"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/login_using_mobno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:drawableTint="@color/colorAccent"
            android:drawableLeft="@drawable/mobile_icon"
            android:background="@drawable/button_style"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_have_an_account"
            android:textSize="15dp"
            android:textColor="@color/grey"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="19dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>

</ScrollView>