<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/edittext_style"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/edit_profile"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hey_i_am_available"
        android:background="@drawable/edittext_style"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/edit_status"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_profile_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:background="@drawable/button_style"/>

</LinearLayout>